# solidFire

./: CMakeLists.txt  README.md  clean  configure.sh  make  make.Release  rebuild
doc/: .~lock.C++ Programming Exercise.docx#  C++ Programming Exercise.docx
prj/: premake4.lua  runCmake.sh
src/: CMakeLists.txt
src/asio_timer/: asio_timer.cpp
src/path_info/: CMakeLists.txt  path_info.cpp
src/thread/: CMakeLists.txt  thread.cc  thread.cpp
src/thread/inc/: ThreadCounter.hpp
src/thread/src/: ThreadCounter.cpp
src/wordcount/: main.cpp  thread.hpp
src/wordcount/inc/: FileFinder.hpp  FileWordCounter.hpp  ThreadCounter.hpp  WordCount.hpp  jos_types.hpp
src/wordcount/src/: FileFinder.cpp  FileWordCounter.cpp  ThreadCounter.cpp  WordCount.cpp
txt/: test.txt
