cmake_minimum_required(VERSION 2.8)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set (COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS} BOOST_FILESYSTEM_NO_DEPRECATED)
add_definitions(-DBOOST_FILESYSTEM_NO_DEPRECATED)
add_subdirectory(src ${CMAKE_SOURCE_DIR}/bld/${CMAKE_BUILD_TYPE}/src)
