project ( file_info )
find_package( Boost REQUIRED COMPONENTS filesystem)
if ( Boost_FOUND )
   set (SRCS "path_info.cpp")
   include_directories( ${Boost_INCLUDE_DIRS} )
   add_executable   ( file_info ${SRCS} ) 
   set (RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
   target_link_libraries( file_info ${Boost_LIBRARIES} )
endif()
