project ( solidFire )
find_package( Boost REQUIRED COMPONENTS thread program_options filesystem)
if ( Boost_FOUND )
   set (HDRS "thread.h")
   set (SRCS "thread.cc")
   include_directories( ${Boost_INCLUDE_DIRS} )
   add_executable   ( solidFire ${SRCS} ) 
   add_dependencies ( solidFire ${HDRS} )
   set (RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
   get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
   file(WRITE ${CMAKE_SOURCE_DIR}/.clang_complete "")
   foreach(dir ${dirs})
      message(STATUS "-I'${dir}'")
      file (APPEND ${CMAKE_SOURCE_DIR}/.clang_complete "-I${dir}\n")
   endforeach()
#   get_property(defs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY COMPILE_DEFINITIONS)
#   foreach(def ${defs})
#      message(STATUS "-D'${def}'")
#   endforeach()
   message (STATUS "-D ${COMPILE_DEFINITIONS}")
   target_link_libraries( solidFire ${Boost_LIBRARIES} )
endif()
